src/CreateConsultantComponents/PaymentConfirmation/PaymentConfirmation.css
.whileYouarewaiting {
  color: #ffffff;
  font-size: 23px !important;
  font-family: oswald;
  font-weight: 100;
  padding: 30px;
  letter-spacing: 0.25px;
  text-align: center;
}
.pcStepper {
  background: transparent;
  width: 70vw;
  margin-top: 1em;
  margin-bottom: 1em;
  margin-left: auto;
  margin-right: auto;
}
.PCcomponentMargin {
  margin-top: 4em;
}
.PCmobileComponent {
  margin-top: 40px;
}
.paymentConfirmationHead {
  font-family: Oswald;
  font-size: 2em;
  text-align: center;
  font-weight: 300;
}
.paymentConfirmationSuccess {
  font-family: Oswald;
  font-size: 2.5em;
  text-align: center;
  color: #4ba380;
}
.paymentConfirmationFaliure {
  font-family: Oswald;
  font-size: 2.5em;
  text-align: center;
  color: #ef7070;
}
.customURLAssigned {
  background: #ffffff;
  width: 26em;
  height: 2.5em;
  margin-top: 1em;
  margin-bottom: 1em;
  text-align: center;
  font-size: 1.2em;
  padding-top: 0.4em;
  margin-left: auto;
  margin-right: auto;
}
.paymentConfirmationHead2 {
  font-family: Oswald;
  font-size: 1.3em;
  text-align: center;
  font-weight: 400;
}

.pcHead3 {
  font-family: Domine;
  text-align: center;
}
.pcConsultantNumber {
  background: #f7f3f4;
  height: 2em;
  width: 19.5em;
  margin-bottom: 1.5em;
  margin-top: 1em;
  text-align: center;
  font-size: 1.6em;
  font-weight: bold;
  padding-top: 0.25em;
  font-family: Oswald;
  margin-left: auto;
  margin-right: auto;
}

.pcConsultantNumber1 {
  background: #f7f3f4;
  height: 2em;
  width: 19.5em;
  margin-bottom: 1em;
  margin-top: 1em;
  text-align: center;
  font-size: 1.6em;
  font-weight: bold;
  padding-top: 0.25em;
  font-family: Oswald;
  margin-left: auto;
  margin-right: auto;
}

.pcHead4 {
  font-family: oswald;
  font-weight: 400;
  font-size: 23px !important;
  margin-top: 1em;
  text-align: center;
  margin-left: auto;
  margin-right: auto;
}
.fontOswald1 {
  font-family: oswald;
  font-size: 1.3em;
  font-weight: 400;
}
.fontOswald2 {
  font-family: oswald;
  font-size: 1.3em;
  font-weight: 300;
}
.pcFooter {
  background: #241f20;
  width: 100%;
  padding-top: 1.5em;
  overflow: hidden;
}
.pcFooterHead {
  font-family: oswald;
  font-size: 1.7em;
  font-weight: 300;
  color: #ffffff;
  text-align: center;
  margin: auto;
  width: 180px;
}
.pcFooterCard {
  background: #6f6c6d;
  width: 24em;
  height: 6em;
  border-radius: 0.5em;
  margin-top: 2em;
  margin-left: 6vw;
  position: relative;
  cursor: pointer;
}
.pcFooterCard1 {
  background: #6f6c6d;
  width: 24em;
  height: 10em;
  border-radius: 0.5em;
  margin-top: 2em;
  margin-left: 6vw;
  position: relative;
  cursor: pointer;
}
.pcFooterLeftMargin {
  width: 950px;
  text-align: center;
  margin: auto;
}
.pcCardMarginLeft {
  margin-left: auto;
  margin-right: auto;
  margin-top: 2em;
}
.pcFooterNextIcon {
  color: white;
  width: 3em;
  height: 3.5em;
  position: absolute;
  right: 1em;
  bottom: 25%;
}
.pcFooterNextIcon1 {
  color: white;
  width: 3em;
  height: 3.5em;
  position: absolute;
  right: 1em;
  bottom: 55%;
}
.vine-app-store-logo {
  height: 50px;
  width: auto;
  position: absolute;
  right: 2em;
  bottom: 12%;
}

.vine-play-store-logo {
  height: 50px;
  width: auto;
  position: absolute;
  right: 12.3em;
  bottom: 11%;
}
.pcFooterMainIcon {
  position: absolute;
  top: 1.5em;
  left: 3%;
  height: 1.5em;
  width: 1.5em;
}
.pcFooterMainIcon2 {
  position: absolute;
  top: 1.5em;
  left: 5%;
  height: 1.5em;
  width: 1.5em;
}
.pcFooterText {
  color: white;
  position: absolute;
  top: 15%;
  left: 23%;
  width: 10em;
  font-size: 1.3em;
}
.pcFooterText1 {
  color: white;
  position: absolute;
  top: 10%;
  left: 20%;
  width: 10em;
  font-size: 1.3em;
}
.pcFooterText2 {
  color: white;
  position: absolute;
  top: 30%;
  left: 23%;
  width: 10em;
  font-size: 1.3em;
}
.retryPaymentButton {
  text-align: center;
  margin-top: 1em;
  margin-bottom: 3em;
  background: #241f20;
  color: white;
  width: 300px;
  padding: 1.2em;
  font-family: Oswald;
  font-size: 20px;
  letter-spacing: 4px;
  margin-left: auto;
  margin-right: auto;
  cursor: pointer;
  font-weight: 500;
}
.payment-confirmation-error-message {
  font-family: Oswald;
  font-size: 1.5em;
  text-align: center;
  margin-top: 10px;
}

@media only screen and (max-width: 768px) {
  .mobileStackLeftMargin {
    margin-left: -10px;
  }
  .pcFooter {
    background: #241f20;
    width: 100%;
    position: relative;
    bottom: 0;
    overflow: hidden;
    padding-top: 0.5em;
  }
  .pcCardMarginLeft {
    margin-left: 6vw;
    margin-top: 2em;
  }
  .stepperMdMarginLeft {
    margin-left: 35vw;
    height: 22em;
    overflow: hidden;
  }
  .pcFooterLeftMargin {
    margin-left: 160px;
    width: 500px;
  }
}

@media only screen and (max-width: 550px) {
  .mobileStackLeftMargin {
    margin-left: -10px;
  }
  .pcStepper {
    background: transparent;
    width: 70vw;
    margin-top: 1em;
    margin-bottom: 1em;
    position: absolute;
    left: 50px;
  }
  .pcFooter {
    background: #241f20;
    width: 100%;
    position: relative;
    bottom: 0;
    overflow: hidden;
    padding-top: 0.5em;
  }
  .pcCardMarginLeft {
    margin-top: 2em;
  }
  .stepperMdMarginLeft {
    margin-top: -1em;
    margin-bottom: 1em;
    margin-left: 22vw;
    height: 22em;
    overflow: hidden;
  }

  .pcFooterCard {
    background: #6f6c6d;
    width: 20em;
    height: 5em;
    border-radius: 0.5em;
    margin-top: 2em;
    cursor: pointer;
  }
  .pcFooterCard1 {
    background: #6f6c6d;
    width: 20em !important;
    height: 10em;
    border-radius: 0.5em;
    margin-top: 2em;
    margin-left: 6vw;
    position: relative;
    cursor: pointer;
  }
  .vine-app-store-logo {
    height: 43px;
    width: auto;
    position: absolute;
    right: 1.3em;
    bottom: 12%;
  }

  .vine-play-store-logo {
    height: 45px;
    width: auto;
    position: absolute;
    right: 9.7em;
    bottom: 11%;
  }
  .pcFooterLeftMargin {
    margin-left: 50px;
    width: 500px;
  }
  .paymentConfirmationHead {
    font-family: Oswald;
    font-size: 1.5em;
    text-align: center;
    font-weight: 300;
    margin-top: 1.3em;
  }
  .paymentConfirmationSuccess {
    font-family: Oswald;
    font-size: 2em;
    text-align: center;
    color: #4ba380;
  }
  .paymentConfirmationFaliure {
    font-family: Oswald;
    font-size: 2em;
    text-align: center;
    color: #ef7070;
  }
  .customURLAssigned {
    background: #ffffff;
    width: 23em;
    height: 2.5em;
    margin-top: 1em;
    margin-bottom: 1em;
    text-align: center;
    font-size: 0.9em;
    padding-top: 0.4em;
    margin-left: auto;
    margin-right: auto;
  }
  .paymentConfirmationHead2 {
    font-family: Oswald;
    font-size: 1em;
    text-align: center;
    font-weight: 400;
  }
  .pcHead3 {
    font-family: Domine;
    text-align: center;
    font-size: 1em;
  }
  .pcHead4 {
    font-family: oswald;
    font-weight: 400;
    font-size: 20px !important;
    margin-top: 1em;
    text-align: left;
    padding-left: 1em;
    padding-right: 1em;
    margin-left: 2em;
  }
  .pcConsultantNumber {
    background: #f0eae8;
    height: 3em;
    width: 15.8em;
    margin-bottom: 2.5em;
    margin-top: 1em;
    text-align: center;
    font-size: 1.3em;
    font-weight: bold;
    padding-top: 0.8em;
    font-family: Oswald;
    margin-left: auto;
    margin-right: auto;
  }
  .pcConsultantNumber1 {
    background: #f0eae8;
    height: 3em;
    width: 15.8em;
    margin-bottom: 1.5em;
    margin-top: 1em;
    text-align: center;
    font-size: 1.3em;
    font-weight: bold;
    padding-top: 0.8em;
    font-family: Oswald;
    margin-left: auto;
    margin-right: auto;
  }
  .fontOswald1 {
    font-family: oswald;
    font-size: 1.2em;
    font-weight: 400;
  }
  .fontOswald2 {
    font-family: oswald;
    font-size: 1.2em;
    font-weight: 300;
  }
  .pcFooterHead {
    font-family: oswald;
    font-size: 1.5em;
    font-weight: 300;
    color: #ffffff;
    margin-top: 1.5em;
    text-align: left;
    margin-left: 8%;
  }
  .pcFooterText {
    color: white;
    position: absolute;
    top: 20%;
    left: 23%;
    width: 11em;
    font-size: 1.1em;
  }
  .pcFooterText1 {
    color: white;
    position: absolute;
    top: 13%;
    left: 20%;
    width: 10em;
    font-size: 1.1em;
  }
  .pcFooterText2 {
    color: white;
    position: absolute;
    top: 33%;
    left: 23%;
    width: 10em;
    font-size: 1.1em;
  }
  .pcFooterNextIcon {
    color: white;
    width: 3em;
    height: 3.5em;
    position: absolute;
    right: 1em;
    bottom: 17%;
  }
  .pcFooterMainIcon {
    position: absolute;
    top: 1.3em;
    left: 3%;
    height: 1.5em;
    width: 1.5em;
  }
  .pcFooterMainIcon2 {
    position: absolute;
    top: 1.3em;
    left: 5%;
    height: 1.5em;
    width: 1.5em;
  }

  .arrowIcon1 {
    margin-left: 1em;
    margin-top: -1em;
  }
}
.WithStyles\(ForwardRef\(StepConnector\)\)-completed-40
  .WithStyles\(ForwardRef\(StepConnector\)\)-line-41 {
  border-color: #4ba380;
  margin-left: 0.3em;
  margin-top: 0.2em;
}
.WithStyles\(ForwardRef\(StepConnector\)\)-line-23 {
  border-color: #4ba380;
  border-radius: 1px;
  border-top-width: 1px;
  margin-left: 0.2em;
}
.signOutStyle {
  position: absolute;
  right: 1.5em;
  margin-top: -1em;
  font-size: 0.8em;
  font-family: Oswald;
}
@media (max-width: 567px) {
  .retryPaymentButton {
    text-align: center;
    margin-top: 1em;
    margin-bottom: 3em;
    background: #241f20;
    color: white;
    width: 250px;
    padding: 0.8em;
    font-family: Oswald;
    font-size: 20px;
    letter-spacing: 2px;
    margin-left: auto;
    margin-right: auto;
    cursor: pointer;
    font-weight: 500;
  }
}
@media only screen and (max-width: 414px) {
  .pcFooterHead {
    font-family: oswald;
    font-size: 1.5em;
    font-weight: 300;
    color: #ffffff;
    margin-top: 1.5em;
    text-align: left;
    margin-left: 50px;
  }
  .pcFooterLeftMargin {
    margin-left: 35px;
  }
}

@media only screen and (max-width: 375px) {
  .pcFooterHead {
    font-family: oswald;
    font-size: 1.5em;
    font-weight: 300;
    color: #ffffff;
    margin-top: 1.5em;
    text-align: left;
    margin-left: 30px;
  }
  .pcFooterLeftMargin {
    margin-left: 15px;
  }
}

@media only screen and (max-width: 360px) {
  .pcFooterHead {
    font-family: oswald;
    font-size: 1.5em;
    font-weight: 300;
    color: #ffffff;
    margin-top: 1.5em;
    text-align: left;
    margin-left: 25px;
  }
  .pcFooterLeftMargin {
    margin-left: 10px;
  }
}
@media only screen and (max-width: 2500px) and (min-width: 1500px) {
  .pcFooterLeftMargin {
    width: 1000px;
    text-align: center;
    margin: auto;
  }
}
@media only screen and (max-width: 3100px) and (min-width: 2500px) {
  .pcFooterLeftMargin {
    width: 1050px;
    text-align: center;
    margin: auto;
  }
}

